[gd_scene load_steps=8 format=3 uid="uid://648tyusl034c"]

[ext_resource type="Theme" uid="uid://1cbvg04l0616" path="res://addons/hyh.digression/editor/nodes/styles/node_theme.tres" id="1_ip1ir"]
[ext_resource type="StyleBox" uid="uid://cy2mtyhieui8q" path="res://addons/hyh.digression/editor/nodes/styles/control_node.tres" id="2_tky8b"]
[ext_resource type="StyleBox" uid="uid://dt03i76r27rvt" path="res://addons/hyh.digression/editor/nodes/styles/control_node_selected.tres" id="3_lenhd"]
[ext_resource type="StyleBox" uid="uid://bfb7qelnfi6bj" path="res://addons/hyh.digression/editor/nodes/styles/control_node_titlebar.tres" id="4_0v52r"]
[ext_resource type="StyleBox" uid="uid://cg1qeowcx5883" path="res://addons/hyh.digression/editor/nodes/styles/control_node_titlebar_selected.tres" id="5_7tqjy"]
[ext_resource type="Script" uid="uid://cpd7vmdtm15ks" path="res://addons/hyh.digression/editor/nodes/EditorExitNode.gd" id="6_lenhd"]
[ext_resource type="PackedScene" uid="uid://bhp62qnb4xqye" path="res://addons/hyh.digression/editor/controls/SingleValueAnyTypeControl.tscn" id="6_tky8b"]

[node name="EditorExitNode" type="GraphNode"]
theme = ExtResource("1_ip1ir")
theme_override_styles/panel = ExtResource("2_tky8b")
theme_override_styles/panel_selected = ExtResource("3_lenhd")
theme_override_styles/titlebar = ExtResource("4_0v52r")
theme_override_styles/titlebar_selected = ExtResource("5_7tqjy")
title = "Exit"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("6_lenhd")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="HB" type="HBoxContainer" parent="MC/VB"]
layout_mode = 2

[node name="Label" type="Label" parent="MC/VB/HB"]
layout_mode = 2
text = "Exit type:"

[node name="ExitTypeOption" type="OptionButton" parent="MC/VB/HB"]
layout_mode = 2
flat = true
selected = 0
item_count = 2
popup/item_0/text = "Return to parent"
popup/item_0/id = 0
popup/item_1/text = "Stop graph processing"
popup/item_1/id = 1

[node name="ExitValue" parent="MC/VB" instance=ExtResource("6_tky8b")]
layout_mode = 2
size_flags_horizontal = 0
type_menu_title = "Set Exit Value"
value_label_text = "Exit Value:"

[connection signal="item_selected" from="MC/VB/HB/ExitTypeOption" to="." method="_on_exit_type_option_item_selected"]
